make app Responsive

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="main" id="main">
       <h2>👋 Hi I am</h2>
       <h1>Hedi Rahimi</h1>
-      <h3>🌟 Front-end developer, based in Iran</h3>
+      <h3>IR Front-end developer, based in Iran</h3>
       <div class="navigation-links mb-5">
         <a href="about.html#contact" class="contact-link">Contact me</a>
         <a href="about.html" class="about-link">About me</a>
@@ -69,7 +69,7 @@
           <img
             src="images/yoga.png"
             alt="yoga-project"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
 
@@ -105,7 +105,7 @@
           <img
             src="images/weather.png"
             alt="weather-project"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
       </div>
@@ -114,7 +114,7 @@
           <img
             src="images/yogurt.png"
             alt="yogurt-project"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
         <div class="col-md-6">
