--- a/about.html
+++ b/about.html
@@ -70,21 +70,21 @@
             <img
               src="images/yoga.png"
               alt="yoga-project"
-              class="img-fluid rounded"
+              class="img-fluid rounded p-2 mb-4 shadow"
             />
           </div>
           <div class="col-sm-4">
             <img
               src="images/weather.png"
               alt="weather-project"
-              class="img-fluid rounded"
+              class="img-fluid rounded p-2 mb-4 shadow"
             />
           </div>
           <div class="col-sm-4">
             <img
               src="images/yogurt.png"
               alt="yogurt-project"
-              class="img-fluid rounded"
+              class="img-fluid rounded p-2 mb-4 shadow"
             />
           </div>
         </div>
